@@ -44,7 +44,6 @@ import componenttest.annotation.TestServlet;
 import componenttest.custom.junit.runner.FATRunner;
 import componenttest.custom.junit.runner.Mode;
 import componenttest.custom.junit.runner.Mode.TestMode;
-import componenttest.topology.impl.JavaInfo;
 import componenttest.topology.impl.LibertyServer;
 
 /**
@@ -75,7 +74,7 @@ public class RequestTimingMbeanTest {
     static ObjectName ServletInstanceName;
 
     // Keeping a AtomicLong total count because of threads created
-    public static AtomicLong totalRequestCount = new AtomicLong();
+    public static final AtomicLong totalRequestCount = new AtomicLong();
     public static long mbeanServletActiveCount = 1;
 
     public final String TestRequestHandlerUrl = getURLString("TestRequestHandler", 0);
@@ -88,14 +87,8 @@ public class RequestTimingMbeanTest {
      */
     @BeforeClass
     public static void setUp() throws Exception {
+        totalRequestCount.set(0);
         ShrinkHelper.defaultDropinApp(server, "RequestTimingWebApp", "com.ibm.ws.request.timing.app");
-
-        JavaInfo java = JavaInfo.forCurrentVM();
-        int javaMajorVersion = java.majorVersion();
-        if (javaMajorVersion != 8) {
-            Log.info(c, "setUp", " Java version = " + javaMajorVersion + " - It is higher than 8, adding --add-exports...");
-            server.copyFileToLibertyServerRoot("add-exports/jvm.options");
-        }
 
         server.startServer();
     }
@@ -541,7 +534,7 @@ public class RequestTimingMbeanTest {
      * allow a test to finish
      *
      * @param countToWaitFor
-     *                           Value looked for in CountDownLatch
+     *            Value looked for in CountDownLatch
      * @throws Exception
      */
     private void waitInServletForCountDownLatch(int countToWaitFor) throws Exception {
@@ -615,13 +608,13 @@ public class RequestTimingMbeanTest {
      * test
      *
      * @param th
-     *                            -- array of threads
+     *            -- array of threads
      * @param numReqs
-     *                            -- number of requests is the number of threads needed
+     *            -- number of requests is the number of threads needed
      * @param servletTestName
-     *                            -- Used for request to servlet
+     *            -- Used for request to servlet
      * @param testMethodName
-     *                            -- Used for printing to logs
+     *            -- Used for printing to logs
      */
     private void createRequestThreads(Thread[] th, int numReqs) {
         // Send N servlet requests to server, last request used to terminate
